# spatial-jobs-index

./: .coderabbit.yaml  .env.example  .envrc  .gitignore  .mcp.json  .mcp.local.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  backend.just  flake.nix  frontend.just  justfile  lightcast.json  note_on_db.txt  package-lock.json  package.json
backend/: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  README.md  deploy.sh  flake.nix  pyproject.toml  pytest.ini  test_lightcast.py  test_lightcast_integration.py  test_precommit.py  test_python.py
backend/.github/workflows/: build.yml  test.yml
backend/app/: README.md  config.py  constants.py  database.py  db_utils.py  lightcast_api.py  lightcast_service.py  logging_config.py  main.py  models.py  occupation_cache.py  services.py
backend/app/repositories/: __init__.py  base.py  occupation.py  school_of_study.py  travel_time.py
backend/docs/: correlation-id-middleware.md  security-fix-28.md
backend/tests/: README.md  __init__.py  conftest.py  factories.py  test_example_endpoints.py  test_helpers.py  test_infrastructure.py
backend/tests/integration/: __init__.py  test_api_integration.py  test_debug.py  test_occupation_endpoint.py  test_school_of_study_endpoints.py
backend/tests/unit/: __init__.py  test_database.py  test_error_handling_refactor.py  test_error_security.py  test_handle_internal_error_exists.py  test_logging.py  test_main.py  test_models.py  test_occupation_service.py  test_school_of_study_endpoints.py  test_school_of_study_service.py  test_services.py
(+229 files in other folders)
